--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -110,14 +110,14 @@ code.inline {
 }
 
 .pagination .page {
-  @apply border px-2 py-1 m-1 inline-block&nbsp;&nbsp;
+  @apply border px-2 py-1 m-1 inline-block
   border rounded-md bg-zinc-100 shadow-md
   hover:!bg-slate-600 hover:!shadow-lg
   hover:!text-gray-100;
 }
 
 *.tag-link {
-  @apply text-xs;
+  @apply p-1 text-xs;
 }
 
 *.active { @apply !bg-slate-600 text-gray-100; }
