--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -139,6 +139,10 @@ figure img {
   @apply shadow-md rounded-sm;
 }
 
+*.preview-first-text {
+  @apply font-semibold block text-gray-400;
+}
+
 /* Original Phonix.css stuff. Maybe removed soon */
 /* Alerts and form errors used by phx.new */
 .alert {
